<resources>
    <string name="app_name">LoginByZhiWen</string>
    <string name="user_text">账&#160;&#160;&#160;&#160;号:</string>
    <string name="user_name">请输入账号</string>
    <string name="pwd_text">密&#160;&#160;&#160;&#160;码:</string>
    <string name="password">请输入密码</string>
    <string name="login">登&#160;&#160;&#160;&#160;录</string>
    <string name="not_login">未&#160;登&#160;录</string>
    <string name="registered">注&#160;&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="send">发&#160;&#160;&#160;&#160;送</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="go_back">返回</string>
    <string name="exit">退&#160;&#160;&#160;&#160;出</string>
    <string name="login_success">登陆成功</string>
    <string name="failed_login">登陆失败</string>
    <string name="bind_zhi_wen">绑定指纹</string>
    <string name="bind_gesture">绑定手势</string>
    <string name="please_bind_gesture">请设置手势密码</string>
    <string name="check_bind_gesture">请确认手势密码</string>
    <string name="reset_bind_gesture">重置手势密码</string>
    <string name="please_reset_bind_gesture">请重置手势密码</string>
    <string name="forget_bind_gesture">忘记手势密码?</string>
    <string name="please_input_gesture">请输入手势密码</string>
    <string name="start_bind_finger">开始绑定指纹</string>
    <string name="bind_finger_press">请按压已录入指纹的手指</string>
    <string name="jump">跳过</string>
    <string name="welcome_to_back">欢迎回来</string>
    <string name="loginbyfinger">指纹登录</string>
    <string name="loginbyguesture">手势登录</string>
    <string name="loginbypwd">普通登录</string>
    <!--ToastWords-->
    <string name="user_mobile_name">请输入手机号</string>
    <string name="user_register_name">请输入6-18位数字和字母组合</string>
    <string name="register_name">请输入6位数字密码</string>
    <string name="get_security_code">获取验证码</string>
    <string name="me_security_code">请输入验证码</string>
    <string name="cb_xieyi">我已阅读并同意</string>
    <string name="me_password">请再次输入密码</string>
    <string name="tv_xieyi">《用户协议》</string>
    <string name="tv_xieyi_toast">请阅读并同意《用户协议》</string>
    <string name="name_is_not_allow_null">用户名不能为空</string>
    <string name="name_is_not_valid">请输入正确的手机号码</string>
    <string name="data_is_new">已经是最新数据了</string>
    <string name="data_is_load_over">加载完成</string>
    <string name="pwd_is_not_allow_null">密码不能为空</string>
    <string name="pwd_is_not_valid">密码格式不正确,请输入6-18位数字和字母组合</string>
    <string name="chek_pwd">请输入登录密码,以重置手势密码</string>
    <string name="please_input_pwd">请输入登录密码</string>
    <string name="check_login_pwd">登录密码验证</string>
    <string name="ok">确认</string>
    <string name="cancle">取消</string>
    <string name="share">分享</string>
    <!--网络判断吐司-->
    <string name="isContent">用户名不能为空</string>
    <string name="notContent">网络异常,请检查网络设置</string>
    <string name="isMobile">当前网络连接不稳定,数据加载缓慢,请稍候...</string>
    <string name="isWifi">当前网络是wifi连接</string>
    <string name="isMobileNet">当前网速较差,数据加载缓慢,请稍候...</string>
    <string name="no_internet">无网络连接</string>
    <string name="generic_server_down">连接服务器失败</string>
    <string name="generic_error">网络异常,请稍后再试</string>
    <string name="mobile_is_not_null">手机号码不能为空</string>
    <string name="score_is_not_null">验证码不能为空</string>
    <string name="pwd_not_equales_mepwd">两次密码不一致,请重新输入</string>
    <string name="me_pwd_is_not_allow_null">确认密码不能为空</string>
</resources>
