<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<com.example.bjlz.loginbyzhiwen.views.TitleBarView
    android:visibility="gone"
    android:id="@+id/title_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/start_bind_finger"
        android:id="@+id/btn_start_finger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/ll_finger"
        android:background="@color/devide_line"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="2dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_show_title"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/whites"
            android:layout_gravity="center"
            android:text="@string/bind_zhi_wen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/devide_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tv_show_message"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/whites"
            android:layout_gravity="center"
            android:text="@string/bind_finger_press"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
        <View
            android:background="@color/devide_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:gravity="center"
            android:background="@color/whites"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <Button
                android:background="@color/transparent"
                android:id="@+id/btn_ok"
                android:text="@string/ok"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center|left"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <Button
                android:background="@color/transparent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btn_cancle"
                android:text="@string/cancle"
                android:gravity="center"
                android:layout_weight="1.0"
                android:layout_gravity="center|right"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>