<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/whites"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.example.bjlz.loginbyzhiwen.views.TitleBarView
        android:id="@+id/title_bar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tv_set_guesture"
        android:gravity="center"
        android:text="@string/please_bind_gesture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
        android:background="@color/tr_blue"
        android:layout_centerInParent="true"
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
    <LinearLayout
        android:visibility="gone"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_above="@id/frame_layout"
        android:id="@+id/ll_gesture"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_reset_gesture"
            android:text="@string/reset_bind_gesture"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1.0"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_forget_gesture"
            android:gravity="center"
            android:text="@string/forget_bind_gesture"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="match_parent" />
    </LinearLayout>
    </RelativeLayout>
</LinearLayout>