<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/transparent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:background="@drawable/background_popupwindow"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_zhi_wen"
                android:gravity="center"
                android:text="@string/bind_zhi_wen"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
            <View
                android:background="@color/devide_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/tv_guesture"
                android:text="@string/bind_gesture"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
            <View
                android:background="@color/devide_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>
            <LinearLayout
                android:background="@drawable/background_popupwindow"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:id="@+id/tv_jump"
                android:text="@string/jump"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>